[package]
name = "vk-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["native-tokio", "http1", "http2"] }
http-body-util = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & Configuration
dotenvy = "0.15"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
time = { version = "0.3", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }
